Fixed COlumn Row switching, Fixed alignment error

--- a/JSheets/styles.css
+++ b/JSheets/styles.css
@@ -45,3 +45,12 @@ td {
 #a {
 	display:none;
 }
+th {
+	border:1px solid black;
+	max-width:100px;
+	width:100px;
+	height:20px;
+	padding:2px;
+	background-color:#444;
+	color:#bbb;
+}
